add blog page layout

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "type": "git",
         "url": ""
     },
-    "author": "Pavel Fedorov <pashok05_01@mail.ru>",
+    "author": "",
     "contributors": [],
     "bugs": {
         "url": "",
